# packet-analyzer

./: Cargo.toml  config.toml  run.sh
src/: config.rs  interface.rs  main.rs  packet_handler.rs  stats.rs  utils.rs
src/handlers/: dns.rs  mod.rs  tcp.rs  udp.rs
