[package]
name = "perso"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap = { version = "0.9", features = ["capture-stream"] }
etherparse = "0.9.0"
num-traits = "0.2"
num-derive = "0.2"
num_cpus = "1.13.0"
dns-parser = "0.8.0"
core_affinity = "0.5.10"
queues = "1.1.0"
confy = "0.4.0"
serde = "^1.0"
serde_derive = "^1.0"
phf = { version = "0.9", features = ["macros"] }